--- a/data/song.yml
+++ b/data/song.yml
@@ -74,13 +74,7 @@ patch:
       units:
         - type: oscillator
           id: 11
-          parameters: {color: 64, detune: 64, gain: 24, looplength: 1, loopstart: 1343, phase: 0, samplestart: 367477, shape: 64, stereo: 0, transpose: 85, type: 4}
-        - type: envelope
-          id: 12
-          parameters: {attack: 0, decay: 64, gain: 64, release: 0, stereo: 0, sustain: 0}
-        - type: mulp
-          id: 13
-          parameters: {stereo: 0}
+          parameters: {color: 64, detune: 64, gain: 12, looplength: 1, loopstart: 1343, phase: 0, samplestart: 367477, shape: 64, stereo: 0, transpose: 85, type: 4}
         - type: pan
           id: 152
           parameters: {panning: 60, stereo: 0}
@@ -114,6 +108,8 @@ patch:
         - type: outaux
           id: 23
           parameters: {auxgain: 0, outgain: 40, stereo: 1}
+        - id: 1181
+          parameters: {}
         - type: envelope
           id: 24
           parameters: {attack: 0, decay: 64, gain: 128, release: 0, stereo: 0, sustain: 0}
@@ -166,6 +162,8 @@ patch:
         - type: aux
           id: 37
           parameters: {channel: 4, gain: 128, stereo: 1}
+        - id: 1182
+          parameters: {}
         - type: envelope
           id: 38
           parameters: {attack: 0, decay: 70, gain: 128, release: 70, stereo: 0, sustain: 0}
@@ -175,6 +173,8 @@ patch:
         - type: send
           id: 40
           parameters: {amount: 101, port: 0, sendpop: 1, stereo: 0, target: 3}
+        - id: 1183
+          parameters: {}
         - type: envelope
           id: 1138
           parameters: {attack: 48, decay: 58, gain: 128, release: 0, stereo: 0, sustain: 0}
@@ -239,8 +239,6 @@ patch:
         - type: outaux
           id: 1169
           parameters: {auxgain: 0, outgain: 64, stereo: 1}
-        - id: 1172
-          parameters: {}
         - id: 1173
           parameters: {}
         - type: envelope
@@ -331,7 +329,7 @@ patch:
         - type: outaux
           id: 105
           parameters: {auxgain: 128, outgain: 128, stereo: 1}
-    - name: PitchUp
+    - name: FilterUp
       numvoices: 1
       units:
         - type: envelope
@@ -343,7 +341,7 @@ patch:
         - type: send
           id: 113
           parameters: {amount: 96, port: 0, sendpop: 1, stereo: 0, target: 21, unit: 0, voice: 0}
-    - name: Blip
+    - name: Chirp
       numvoices: 1
       units:
         - type: envelope
@@ -365,6 +363,8 @@ patch:
         - type: outaux
           id: 120
           parameters: {auxgain: 128, outgain: 0, stereo: 1}
+        - id: 1184
+          parameters: {}
         - type: envelope
           id: 121
           parameters: {attack: 0, decay: 64, gain: 12, release: 0, stereo: 0, sustain: 0}
@@ -392,6 +392,8 @@ patch:
         - type: outaux
           id: 128
           parameters: {auxgain: 128, outgain: 0, stereo: 1}
+        - id: 1185
+          parameters: {}
         - type: envelope
           id: 130
           parameters: {attack: 84, decay: 0, gain: 64, release: 64, stereo: 0, sustain: 128}
@@ -422,12 +424,16 @@ patch:
         - type: outaux
           id: 138
           parameters: {auxgain: 24, outgain: 0, stereo: 1}
+        - id: 1186
+          parameters: {}
         - type: envelope
           id: 141
           parameters: {attack: 70, decay: 0, gain: 128, release: 0, stereo: 0, sustain: 128}
         - type: send
           id: 142
           parameters: {amount: 52, port: 0, sendpop: 1, stereo: 0, target: 134, unit: 0, voice: 0}
+        - id: 1187
+          parameters: {}
         - type: oscillator
           id: 144
           parameters: {color: 128, detune: 0, gain: 128, lfo: 0, phase: 0, shape: 64, stereo: 0, transpose: 26, type: 1, unison: 1}
@@ -459,13 +465,15 @@ patch:
         - type: outaux
           id: 182
           parameters: {auxgain: 64, outgain: 0, stereo: 1}
+        - id: 1188
+          parameters: {}
         - type: oscillator
           id: 1157
           parameters: {color: 128, detune: 64, gain: 64, lfo: 1, phase: 0, shape: 64, stereo: 0, transpose: 33, type: 0}
         - type: send
           id: 1158
           parameters: {amount: 66, port: 0, sendpop: 1, stereo: 0, target: 179, unit: 0, voice: 0}
-    - name: Blip
+    - name: DelaySine
       numvoices: 1
       units:
         - type: envelope
@@ -490,6 +498,8 @@ patch:
         - type: outaux
           id: 188
           parameters: {auxgain: 64, outgain: 64, stereo: 1}
+        - id: 1189
+          parameters: {}
         - type: envelope
           id: 1111
           parameters: {attack: 48, decay: 80, gain: 128, release: 80, stereo: 0, sustain: 0}
@@ -527,6 +537,8 @@ patch:
         - type: outaux
           id: 34
           parameters: {auxgain: 128, outgain: 0, stereo: 1}
+        - id: 1190
+          parameters: {}
         - type: loadnote
           id: 1105
           parameters: {}
