Add separate executable for capturing video.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
+cmake_policy(SET CMP0091 NEW)
+
 set(CMAKE_VERBOSE_MAKEFILE ON)
 
 project(fourkay-someday
@@ -17,10 +19,7 @@ if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
 endif()
 
 # tell nasm that we want 32-bit OBJ file
-set(CMAKE_ASM_NASM_OBJECT_FORMAT win32)
-enable_language(ASM_NASM)
-# remove flags from nasm as the same compile flags were causing trouble
-set(CMAKE_ASM_NASM_COMPILE_OBJECT "<CMAKE_ASM_NASM_COMPILER> <INCLUDES> <DEFINES> -f ${CMAKE_ASM_NASM_OBJECT_FORMAT} -o <OBJECT> <SOURCE>")
+
 
 find_program(GO NAMES go)
 if(NOT GO)
@@ -29,4 +28,13 @@ else()
   message(STATUS "Go found at: ${GO}")
 endif()
 
-add_subdirectory(intro)
+if("${CMAKE_SIZEOF_VOID_P}" STREQUAL "4")
+    set(CMAKE_ASM_NASM_OBJECT_FORMAT win32)
+    enable_language(ASM_NASM)
+    # remove flags from nasm as the same compile flags were causing trouble
+    set(CMAKE_ASM_NASM_COMPILE_OBJECT "<CMAKE_ASM_NASM_COMPILER> <INCLUDES> <DEFINES> -f ${CMAKE_ASM_NASM_OBJECT_FORMAT} -o <OBJECT> <SOURCE>")
+    add_subdirectory(intro)
+else() 
+    enable_language(ASM_NASM)
+    add_subdirectory(capture)
+endif()
